Revision history for Perl extension XTaTIK.

0.005001 2015-09-13
    [Miscellaneous]
        - Made footer addresses look good for 1–6 locations (#129)
        - Made it possible to specify shoutout art for the animation
        - Added 'after-shoutout' template fragment

0.004001 2015-09-12
    [Breaking Changes]
        - XTaTIK SASS variables without xtatik- prefix have been renamed (#146)
        - 'Add to quote' feature is now enabled by setting price to -1 dollars.
            Prices set to 0 now trigger "FREE" products instead (#149)
    [PayPal cart plugin]
        - Prevent accidental checkouts by following a URL from history (#152)
        - Fix formatting issues and markup errors on 'order' emails (#151)
        - Added 'free shipping for purchases above X-dollars' feature (#154)
    [Miscellaneous]
        - Fix formatting on Site Feedback and Quicknote emails (#150)
        - Added support for multiple product images, including auto-find (#105)

0.003001 2015-09-07
    [Breaking Changes]
        - Restructured cart plugin system
        - checkout_system config var now must be an arrayref
    [Bug fixes]
        - Fixed alignment on shoutout when thin logos are used
        - Removed use of experimental autoderef to be
            compatible with newest perls (#147)

0.002001 2015-09-06
    [Breaking Changes]
        - Pricing is now per-site and not global (#133)
        - Allow setting per-region GeoIP pricing
    [Bug fixes]
        - nopic.png is now properly displayed on search results and checkout
            page for products without pics (#144)
        - Empty categories now result in 404s (#143)
        - Checking out while setting all quantities to zero
            is no longer possible (#145)
        - Fixed rendering bug on checkout progress bar (#136)
    [Miscellaneous]
        - Made default favicon prettier (#62)
        - Made all existing tests pass (must set XTATIK_TESTING env to run)
            (#119)