@@ -47,6 +47,13 @@ my $main_conf = {
 
         paypal        => $secret->{text}{paypal},
         paypal_custom => $secret->{text}{paypal_custom},
+        # paypal_custom_fields => [
+        #     markup  => q{
+        #         <label for="c_discreet">Promo code:</label
+        #                 ><%= text_field 'promo_code' => id => 'c_promo_code',
+        # class => 'form-control' %>
+        #     },
+        # ],
         order_number => 'X%06d',
         quote_number => 'Q%06d',
 
